# diploma

TTCross/: CMakeCache.txt  CMakeLists.txt  Makefile  calculation.cpp  calculation.hpp  cmake_install.cmake  core.cpp  core.hpp  implicitTensor.cpp  implicitTensor.hpp  implicit_tensor.cpp  implicit_tensor.hpp  input  log.txt  main  main.cpp  main.cu  matrix.cpp  matrix.hpp  skeleton  skeleton.cpp  skeleton.hpp  tensor.cpp  tensor.hpp  tensorTrain.cpp  tensorTrain.hpp  tensor_train.cpp  tensor_train.hpp  tmp.txt  tmp2.txt  unfoldingMatrix.cpp  unfoldingMatrix.hpp  unfolding_matrix.cpp  unfolding_matrix.hpp
TTCross/include/: calculation.cuh  calculation.hpp  core.cuh  dev_core.cuh  dev_implicit_tensor.cuh  dev_matrix.cuh  dev_tensor_train.cuh  dev_unfolding_matrix.cuh  host_matrix.cuh  host_matrix.hpp  implicit_tensor.cuh  implicit_tensor.hpp  matrix.cuh  matrix.hpp  skeleton.cuh  skeleton.hpp  tensor.cuh  tensor.hpp  tensor_train.cuh  tensor_train.hpp  unfolding_matrix.cuh  unfolding_matrix.hpp
TTCross/src/: calculation.cpp  calculation.cu  core.cpp  core.cu  dev_core.cu  dev_implicit_tensor.cu  dev_matrix.cu  dev_tensor_train.cu  dev_unfolding_matrix.cu  host_matrix.cpp  host_matrix.cu  implicit_tensor.cpp  implicit_tensor.cu  matrix.cpp  matrix.cu  skeleton.cpp  skeleton.cu  tensor.cpp  tensor.cu  tensor_train.cpp  tensor_train.cu  unfolding_matrix.cpp  unfolding_matrix.cu
